# leaf-flow

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose-stage.yml  docker-compose.yml  pyproject.toml  test_outbox.py
docs/plans/: 2026-02-21-chat-integration-design.md
migrations/: env.py
nginx/: DockerfileSTAGE  nginx.conf  nginx_stage.conf
src/leaf_flow/: __main__.py  app.py  config.py  outbox_worker.py
src/leaf_flow/api/: deps.py
src/leaf_flow/api/v1/routers/: users.py
src/leaf_flow/application/auth/: exceptions.py
src/leaf_flow/application/dto/: auth.py  notification.py  telegram.py
src/leaf_flow/application/events/: base.py  factory.py
src/leaf_flow/application/ports/: auth.py  cart.py  category.py  image.py  object_storage.py  order.py  outbox.py  products.py  review.py  support_topic.py  user.py
src/leaf_flow/domain/: mappers.py
src/leaf_flow/domain/entities/: auth.py  cart.py  category.py  order.py  outbox.py  product.py  review.py  support_topic.py  user.py
src/leaf_flow/domain/events/: image.py  order.py
src/leaf_flow/domain/mappers/: cart.py  notifications.py  order.py  product.py  review.py  user.py
src/leaf_flow/infrastructure/db/: admin_uow.py  base.py  session.py  uow.py
src/leaf_flow/infrastructure/outbox/: processor.py
src/leaf_flow/services/: admin_product_service.py  auth_service.py  cart_service.py  catalog_service.py  media_service.py  notification_service.py  order_service.py  review_service.py  security.py  support_topic_service.py  user_service.py
src/leaf_flow/services/admin/: images_service.py
(+116 files in other folders)
